# s3m

./: .codespellrc  .gitignore  .justfile  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.devcontainer/: Dockerfile  setup.sh
.github/actions-rs/: grcov.yml
.github/workflows/: build.yml  containers.yml  coverage.yml  deploy.yml  packagecloud.yml  rust.yml  test.yml
.github/workflows/templates/: packagecloud.yml
.rpm/: s3m.spec
benches/: progress_channel_benchmark.rs  sha256_md5_digest_benchmark.rs  upload_hot_path_benchmark.rs
crates/s3m-core/: Cargo.toml  README.md
crates/s3m-core/src/: lib.rs  progressbar.rs
crates/s3m-core/src/s3/: error.rs  limits.rs  mod.rs  object_lock.rs  options.rs
crates/s3m-core/src/s3/actions/: abortmultipartupload.rs  completemultipartupload.rs  createbucket.rs  createmultipartupload.rs  deletebucket.rs  deleteobject.rs  deleteobjects.rs  getobject.rs  getobjectacl.rs  getobjectattributes.rs  getobjectlegalhold.rs  getobjectlockconfiguration.rs  getobjectretention.rs  headobject.rs  listbuckets.rs  listmultipartuploads.rs  listobjectsv2.rs  listobjectversions.rs  mod.rs  putobject.rs  putobjectacl.rs  putobjectlegalhold.rs  putobjectlockconfiguration.rs  putobjectretention.rs  streampart.rs  uploadpart.rs
crates/s3m-core/src/s3/checksum/: digest.rs  hasher.rs  mod.rs
crates/s3m-core/src/s3/credentials/: mod.rs
crates/s3m-core/src/s3/region/: mod.rs
crates/s3m-core/src/s3/request/: mod.rs
crates/s3m-core/src/s3/responses/: mod.rs
crates/s3m-core/src/s3/signature/: mod.rs
crates/s3m-core/src/s3/tools/: mod.rs
crates/s3m-core/src/stream/: db.rs  mod.rs  upload_compressed.rs  upload_compressed_encrypted.rs  upload_default.rs  upload_encrypted.rs  upload_multipart.rs  upload_stdin.rs  upload_stdin_compressed.rs  upload_stdin_compressed_encrypted.rs  upload_stdin_encrypted.rs
scripts/: test-with-podman.sh
src/: credentials.rs  lib.rs  main.rs  options.rs  region.rs  signature.rs
src/cli/: age_filter.rs  config.rs  db.rs  decrypt.rs  dispatch.rs  globals.rs  matches.rs  mod.rs  multipart_upload.rs  progressbar.rs  s3_location.rs  start.rs  upload.rs
src/cli/actions/: acl.rs  bucket.rs  mod.rs  monitor.rs  object_delete.rs  object_du.rs  object_get.rs  object_list.rs  object_lock.rs  object_put.rs  object_share.rs  streams.rs
src/cli/commands/: cmd_acl.rs  cmd_cb.rs  cmd_du.rs  cmd_get.rs  cmd_ls.rs  cmd_mb.rs  cmd_monitor.rs  cmd_object_lock.rs  cmd_rm.rs  cmd_share.rs  cmd_show.rs  cmd_streams.rs  mod.rs
src/options/: acl.rs  bucket.rs  get.rs  get_head.rs  list.rs  mod.rs  put.rs  share.rs  stream.rs
src/options/get/: mod.rs
src/s3/: mod.rs
src/s3/actions/: abortmultipartupload.rs  completemultipartupload.rs  createbucket.rs  createmultipartupload.rs  deletebucket.rs  deleteobject.rs  deleteobjects.rs  getobject.rs  getobjectacl.rs  getobjectattributes.rs  headobject.rs  listbuckets.rs  listmultipartuploads.rs  listobjectsv2.rs  listobjectversions.rs  mod.rs  putobject.rs  putobjectacl.rs  streampart.rs  uploadpart.rs
src/s3/checksum/: digest.rs  hasher.rs  mod.rs
src/s3/credentials/: mod.rs
src/s3/region/: mod.rs
src/s3/request/: mod.rs
src/s3/responses/: mod.rs
src/s3/signature/: mod.rs
src/s3/tools/: mod.rs
src/s3m/: args.rs  config.rs  db.rs  dispatch.rs  matches.rs  mod.rs  multipart_upload.rs  options.rs  part.rs  progressbar.rs  start.rs  stream.rs  streams.rs  upload.rs  x.rs
src/s3m/args/: argparser.rs  command.rs  mod.rs  subcommands.rs  validators.rs
src/stream/: db.rs  iterator.rs  mod.rs  part.rs  state.rs  upload_compressed.rs  upload_compressed_encrypted.rs  upload_default.rs  upload_encrypted.rs  upload_multipart.rs  upload_stdin.rs  upload_stdin_compressed.rs  upload_stdin_compressed_encrypted.rs  upload_stdin_encrypted.rs
testdata/: encrypted_file.enc
tests/: api_object_lock.rs  e2e_binary.rs  e2e_cb.rs  e2e_get.rs  e2e_ls.rs  e2e_misc.rs  e2e_object_lock.rs  e2e_put.rs  e2e_rm.rs  integration_encryption.rs  integration_json_output.rs  integration_minio_runtime.rs  integration_monitor.rs  integration_multipart.rs  integration_s3_actions.rs  integration_stdin.rs  integration_streams.rs
tests/common/: mod.rs
tests/common/helpers/: minio.rs  mod.rs
tests/helpers/: minio.rs
tests/support/: minio_runtime.rs
