[package]
name = "s3m"
version = "0.13.1"
authors = ["Nicolas Embriz <nbari@tequila.io>"]
description = "CLI for streams of data in S3 buckets"
documentation = "https://github.com/s3m/s3m/blob/master/README.md"
homepage = "https://s3m.stream"
repository = "https://github.com/s3m/s3m"
readme = "README.md"
keywords = ["s3", "stream", "upload", "resume", "bucket"]
categories = ["command-line-utilities", "command-line-interface"]
license = "BSD-3-Clause"
edition = "2021"

[dependencies]
anyhow = "1"
base64ct = { version = "1.7.3", features = ["alloc"] }
bincode = "2.0"
blake3 = "1"
bytes = "1"
bytesize = "2"
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
chrono = "0.4"
clap = { version = "4", features = ["env", "string"] }
colored = "3"
crc32c = "0.6"
crc32fast = "1.4"
crossbeam = "0.8"
dirs = "6"
env_logger = "0.11"
futures = "0.3"
http = "1"
indicatif = "0.17"
log = "0.4"
md5 = "0.7"
num_cpus = "1.16"
openssl = { version = "0.10", optional = true, features = ["vendored"] }
percent-encoding = "2.3"
quick-xml = { version = "0.37", features = ["serialize"] }
rand = "0.9.1"
rand_core = { version = "0.9.3", features = ["os_rng"] }
regex = "1.11"
reqwest = { version = "0.12", features = ["stream"] }
ring = "0.17"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
sled = "0.34"
temp-env = "0.3.6"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7", features = ["codec"] }
url = "2.5"
zstd = "0.13"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/s3m", dest = "/usr/bin/s3m", mode = "0755" },
]

[dev-dependencies]
criterion = { version = "0.6", features = ["async_futures"] }
mockito = "1.7.0"

[[bench]]
name = "sha256_md5_digest_benchmark"
harness = false
