[package]
name = "s3m"
version = "0.18.1"
authors = ["Nicolas Embriz <nbari@tequila.io>"]
description = "CLI for streams of data in S3 buckets"
documentation = "https://github.com/s3m/s3m/blob/master/README.md"
homepage = "https://s3m.stream"
repository = "https://github.com/s3m/s3m"
readme = "README.md"
keywords = ["s3", "stream", "upload", "resume", "bucket"]
categories = ["command-line-utilities", "command-line-interface"]
license = "BSD-3-Clause"
edition = "2024"

[lints]
workspace = true

[workspace]
members = ["crates/s3m-core"]

# s3m (bin) and s3m-core (lib) are versioned independently — each bumps only
# when its own code changes. The s3m-core dependency below pins the library
# version the binary builds against.
[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
# Allow unstable/opinionated lints (lower priority so individual lints can override)
nursery = { level = "allow", priority = -1 }

# Enforce pedantic lints
pedantic = "deny"

# Core lint groups
all = "deny"
correctness = "deny"
suspicious = "deny"
perf = "deny"
complexity = "deny"

# Safety-critical lints
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
await_holding_lock = "deny"

# Performance + memory reliability
needless_borrow = "deny"
needless_collect = "deny"
large_stack_arrays = "deny"

[dependencies]
s3m-core = { path = "crates/s3m-core", version = "0.18.1" }
anyhow = "1"
blake3 = "1"
bytes = "1"
bytesize = "2"
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
chrono = "0.4"
clap = { version = "4", features = ["env", "string"] }
colored = "3"
crc32c = "0.6"
dirs = "6"
env_logger = "0.11"
futures = "0.3"
http = "1"
indicatif = "0.18"
log = "0.4"
md5 = "0.8"
rand = "0.10.1"
regex = "1.12"
reqwest = { version = "0.13", default-features = false, features = ["stream", "rustls"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
tempfile = "3"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "io-std",
    "io-util",
    "sync",
    "time",
] }
url = "2.5"
zstd = "0.13"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/s3m", dest = "/usr/bin/s3m", mode = "0755" },
]

[package.metadata.deb]
assets = [
  ["target/release/s3m", "/usr/bin/s3m", "755"],
]
depends = ""

[dev-dependencies]
criterion = { version = "0.8", features = ["async_futures"] }
md5 = "0.8"
mockito = "1.7.2"
ring = "0.17"
rkyv = { version = "0.8", features = ["bytecheck"] }
testcontainers = "0.27"
tokio-util = { version = "0.7", features = ["codec"] }

[[bench]]
name = "sha256_md5_digest_benchmark"
harness = false

[[bench]]
name = "progress_channel_benchmark"
harness = false

[[bench]]
name = "upload_hot_path_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
